New in master
=============

Bugfixes
--------

* Make ``AUTHOR_PAGES_ARE_INDEXES`` really work (Issue #2600)
* WordPress importer now correctly handles &amp; etc. in tags.
  (Issue #2557)
* If ``CODE_COLOR_SCHEME`` is empty, don’t generate ``code.css``
  (Issue #2597)
* Don’t warn about ``nikolademo`` DISQUS account when comments are
  disabled (Issue #2588)
* Make ``data`` from global context available to templated shortcodes
  as ``global_data`` (Issue #2488)
* Don't crash if plugins is a file (Issue #2539)
* Don't mangle bare ``#`` links (Issue #2553)
* ``generic_index_renderer`` now always produces output. It previously
  did not when the post list was empty and ``INDEXES_STATIC == False``.
  (via Issue #2579)

Features
--------

* Allow enabling pretty URLs with per-post setting (Issue #2613)
* Add a ``sort_posts`` function (available as Jinja filter in global
  context), which allows general-purpose timeline sorting (Issue
  #2602)
* Allow creating archive navigation (Issue #1639)
* Accept a ``page`` argument for taxonomy paths (Issue #2585)
* Query strings in magic links are passed as keyword arguments to path
  handlers (via Issue #2580)
* Accept arbitrary arguments to path handlers (via Issue #2580)
* Added new ``typogrify_oldschool`` filter (Issue #2574)
* Improving handling of .dep files, and allowing compilers to specify
  additional targets for the render_posts task (Issue #2536)
* ``render_template`` and ``generic_renderer`` can now create HTML
  fragments.
* Allow posts to set custom ``URL_TYPE`` by using the ``url_type``
  meta tag (useful for HTML fragments inserted using JavaScript)
* Plugins can depend on other plugins being installed (Issue #2533)
* The destination folder in ``POSTS`` and ``PAGES`` can now be
  translated (Issue #2116)
* Pass ``post`` object and ``lang`` to post compilers (Issue #2531)
* Pass ``url_type`` into template's context.
* Make thumbnail naming configurable with ``IMAGE_THUMBNAIL_FORMAT``.