@@ -120,3 +120,13 @@ class ClassifySections(Taxonomy):
                         continue
                     sections.add(section)
             self.enable_for_lang[lang] = (len(sections) > 1)
+
+    def should_generate_classification_page(self, dirname, post_list, lang):
+        """Only generates list of posts for classification if this function returns True."""
+        short_destination = dirname + '/' + self.site.config['INDEX_FILE']
+        for post in post_list:
+            # If there is an index.html pending to be created from a page, do not generate the section page.
+            # The section page would be useless anyways. (via Issue #2613)
+            if post.destination_path(lang, sep='/') == short_destination:
+                return False
+        return True
