@@ -4,6 +4,8 @@ New in master
 Bugfixes
 --------
 
+* Work around conflicts between posts and sections trying to render
+  index.html files (via Issue #2613)
 * Make ``AUTHOR_PAGES_ARE_INDEXES`` really work (Issue #2600)
 * WordPress importer now correctly handles &amp; etc. in tags.
   (Issue #2557)
